[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"
mongodb = "2.5.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
actix-cors = "0.6.4"
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
bcrypt = "0.14.0"
jsonwebtoken = "8.3.0"
bson = { version = "2.0.0-beta.1", features = ["chrono-0_4"] }